<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iphonewallpaper"
    tools:context=".ContactUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/iconfinder_phone_3336937"
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:text="@string/acu_contact_us"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_call"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:src="@drawable/iconfinder_phone"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/image_mail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/iconfinder_mail_287559"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/image_facebook"
            android:layout_gravity="right"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:src="@drawable/iconfinder_facebook_834722"
            android:contentDescription="@null"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="75dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acu_call"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorWhite"
            android:gravity="left"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acu_mail"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:text="@string/acu_facebook"
            android:gravity="right"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </RelativeLayout>
</RelativeLayout>